aonec-bot/overlays/stage/aonec_bot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aonec_bot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.alb.yc.io/subnets: e9b98k3hqkb4fkcsu7hs
    ingress.alb.yc.io/external-ipv4-address: 51.250.3.196
    ingress.alb.yc.io/group-name: ttm
spec:
  rules:
    - host: test.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aonec_bot
                port:
                  number: 80
